--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,9 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXaR8D0qU_zo4HH6SxhiCbcm7aNsYQpHI&libraries=drawing">
+</script>
 </head>
 <body>
   <script>
